add axios, fix bootstrap, finish ui

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lets-watch",
   "version": "1.0.0",
   "description": "Submission kelas 'Belajar Fundamental Front-End Web Development' di Dicoding Indonesia",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack serve --mode development"
@@ -18,14 +18,15 @@
   },
   "homepage": "https://github.com/imfaditya/lets-watch#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.11",
     "css-loader": "^6.7.1",
     "postcss-loader": "^7.0.1",
-    "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
+    "sass-to-string": "^1.6.3",
     "style-loader": "^3.3.1",
     "to-string-loader": "^1.2.0",
     "webpack": "^5.74.0",
