--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "lint-fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.11",
     "css-loader": "^6.7.1",
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "postcss-loader": "^7.0.1",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
