--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.11",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "postcss-loader": "^7.0.1",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
